@@ -8,27 +8,29 @@ COMMENT ON DATABASE demo1 IS 'Gedafe Demo Application 1';
 -- Gedafe Meta Tables
 --###################
 
-DROP TABLE meta_fields;
-CREATE TABLE meta_fields (
-	-- Field Name
-	meta_fields_field	NAME	NOT NULL PRIMARY KEY,
-	-- Use Widget X. At the moment there is only 'area'
-	meta_fields_widget	TEXT,
-	-- Copy forward in edit mask when adding several records
-	meta_fields_copy	BOOLEAN,
-	-- Use ORDER BY function(field) when sorting
-	meta_fields_sortfunc	TEXT
-);
-
 DROP TABLE meta_tables;
 CREATE TABLE meta_tables (
 	-- Table Name
 	meta_tables_table	NAME	NOT NULL PRIMARY KEY,
-	-- Filter table on this column
-	meta_tables_filterfirst	NAME,
-	-- Hide Table in Front-end
-	meta_tables_hide	BOOLEAN
+	-- Attribute
+	meta_tables_attribute	TEXT	NOT NULL,
+	-- Value
+	meta_tables_value	TEXT
 );
+-- standard attributes: filterfirst, hide
+
+DROP TABLE meta_fields;
+CREATE TABLE meta_fields (
+	-- Table Name
+	meta_fields_table	NAME	NOT NULL,
+	-- Field Name
+	meta_fields_field	NAME	NOT NULL,
+	-- Attribute
+	meta_fields_attribute	TEXT	NOT NULL,
+	-- Value
+	meta_fields_value	TEXT
+);
+-- standard attributes: widget, copy, sortfunc
 
 GRANT SELECT ON meta_fields, meta_tables TO PUBLIC;
 
@@ -53,7 +55,7 @@ COMMENT ON COLUMN customer.customer_name IS 'Name';
 COMMENT ON COLUMN customer.customer_address IS 'Address';
 
 -- meta information
-INSERT INTO meta_fields VALUES ('customer_address', 'area');
+INSERT INTO meta_fields VALUES ('customer', 'customer_address', 'widget', 'area');
 
 -- combo-box
 DROP VIEW customer_combo;
@@ -84,7 +86,7 @@ COMMENT ON COLUMN product.product_hid IS 'HID';
 COMMENT ON COLUMN product.product_description IS 'Description';
 
 -- meta information
-INSERT INTO meta_fields VALUES ('product_description', 'area');
+INSERT INTO meta_fields VALUES ('product', 'product_description', 'widget', 'area');
 
 -- combo-box
 DROP VIEW product_combo;
@@ -121,8 +123,8 @@ COMMENT ON COLUMN orders.orders_shipped IS 'Shipped?';
 
 -- meta information
 -- (copy date and customer on the next form while adding)
-INSERT INTO meta_fields VALUES ('orders_date', NULL, TRUE);
-INSERT INTO meta_fields VALUES ('orders_customer', NULL, TRUE);
+INSERT INTO meta_fields VALUES ('orders', 'orders_date', 'copy', '1');
+INSERT INTO meta_fields VALUES ('orders', 'orders_customer', 'copy', '1');
 
 -- presentation view
 DROP VIEW orders_list;
